1.7 EXTRA/main.tf
provider "aws" {
  region = "us-east-1"
}

resource "aws_security_group" "ubuntu_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "amazon_linux_sg" {
  vpc_id = aws_vpc.main.id

  ingress {
    from_port   = -1
    to_port     = -1
    protocol    = "icmp"
    security_groups = [aws_security_group.ubuntu_sg.id]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    security_groups = [aws_security_group.ubuntu_sg.id]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    security_groups = [aws_security_group.ubuntu_sg.id]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    security_groups = [aws_security_group.ubuntu_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    security_groups = [aws_security_group.ubuntu_sg.id]
  }
}

resource "aws_instance" "ubuntu" {
  ami               = "ami-08b5b3a93ed654d19"
  instance_type     = "t2.micro"
  tags = {
    Name = "Ubuntu-Instance"
  }
}

resource "aws_instance" "amazon_linux" {
  ami               = "ami-084568db4383264d4"
  instance_type     = "t2.micro"
  vpc_security_group_ids = [aws_security_group.amazon_linux_sg.id]
  tags = {
    Name = "AmazonLinux-Instance"
  }
}
